--- a/Source/Yobao/Yobao.csproj
+++ b/Source/Yobao/Yobao.csproj
@@ -51,6 +51,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Newtonsoft.Json.6.0.4\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
+    <Reference Include="System.Linq.Dynamic">
+      <HintPath>..\..\packages\System.Linq.Dynamic.1.0.2\lib\net40\System.Linq.Dynamic.dll</HintPath>
+    </Reference>
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -88,6 +91,7 @@
     <Compile Include="Yobao.cs" />
     <Compile Include="YobaoModule.cs" />
     <Compile Include="YobaoNancyBootstrapper.cs" />
+    <Compile Include="YobaoStorageModule.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Yobao.Core\Yobao.Core.csproj">
