--- a/Source/Yobao/Yobao.csproj
+++ b/Source/Yobao/Yobao.csproj
@@ -79,6 +79,7 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ISampleDatabase.cs" />
     <Compile Include="IYobao.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SampleDatabase.cs" />
