removed dead code, moved modules into 'Core' lib so that it's easy to drop into a project.

--- a/Source/Yobao.Core/Yobao.Core.csproj
+++ b/Source/Yobao.Core/Yobao.Core.csproj
@@ -47,6 +47,7 @@
     <Compile Include="DataConfiguration.cs" />
     <Compile Include="IDataPersistence.cs" />
     <Compile Include="IDataSource.cs" />
+    <Compile Include="ModelRegistrar.cs" />
     <Compile Include="NavigationItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
