--- a/Source/Yobao/Web.config
+++ b/Source/Yobao/Web.config
@@ -4,16 +4,18 @@
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
-  <system.web>
-    <compilation debug="true" targetFramework="4.5" />
-    <httpRuntime targetFramework="4.5" />
-  <httpHandlers>
-      <add verb="*" type="Nancy.Hosting.Aspnet.NancyHttpRequestHandler" path="*" />
-    </httpHandlers></system.web>
-<system.webServer>
-    <validation validateIntegratedModeConfiguration="false" />
-    <httpErrors existingResponse="PassThrough" />
-    <handlers>
-      <add name="Nancy" verb="*" type="Nancy.Hosting.Aspnet.NancyHttpRequestHandler" path="*" />
-    </handlers>
-  </system.webServer></configuration>
+	<system.web>
+		<compilation debug="true" targetFramework="4.5" />
+		<httpRuntime targetFramework="4.5" />
+		<httpHandlers>
+			<add verb="*" type="Nancy.Hosting.Aspnet.NancyHttpRequestHandler" path="*" />
+		</httpHandlers>
+	</system.web>
+	<system.webServer>
+		<validation validateIntegratedModeConfiguration="false" />
+		<httpErrors existingResponse="PassThrough" />
+		<handlers>
+			<add name="Nancy" verb="*" type="Nancy.Hosting.Aspnet.NancyHttpRequestHandler" path="*" />
+		</handlers>
+	</system.webServer>
+</configuration>
