moved modules into 'Core' package to support drop-in to a project.

--- a/Source/Yobao/Yobao.csproj
+++ b/Source/Yobao/Yobao.csproj
@@ -47,9 +47,12 @@
     <Reference Include="Nancy.Hosting.Aspnet">
       <HintPath>..\..\packages\Nancy.Hosting.Aspnet.0.23.2\lib\net40\Nancy.Hosting.Aspnet.dll</HintPath>
     </Reference>
+    <Reference Include="Nancy.Serialization.JsonNet">
+      <HintPath>..\..\packages\Nancy.Serialization.JsonNet.0.23.2\lib\net40\Nancy.Serialization.JsonNet.dll</HintPath>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Newtonsoft.Json.6.0.4\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <HintPath>..\..\packages\Newtonsoft.Json.6.0.4\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System.Linq.Dynamic">
       <HintPath>..\..\packages\System.Linq.Dynamic.1.0.2\lib\net40\System.Linq.Dynamic.dll</HintPath>
@@ -90,9 +93,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SampleDatabase.cs" />
     <Compile Include="Yobao.cs" />
-    <Compile Include="YobaoModule.cs" />
     <Compile Include="YobaoNancyBootstrapper.cs" />
-    <Compile Include="YobaoStorageModule.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Yobao.Core\Yobao.Core.csproj">
