--- a/Source/Yobao.Core/Yobao.Core.csproj
+++ b/Source/Yobao.Core/Yobao.Core.csproj
@@ -35,10 +35,6 @@
     <Reference Include="Nancy">
       <HintPath>..\..\packages\Nancy.0.23.2\lib\net40\Nancy.dll</HintPath>
     </Reference>
-    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\packages\Newtonsoft.Json.6.0.4\lib\net45\Newtonsoft.Json.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Linq.Dynamic">
@@ -57,6 +53,8 @@
     <Compile Include="ModelRegistrar.cs" />
     <Compile Include="NavigationItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="YobaoModule.cs" />
+    <Compile Include="YobaoStorageModule.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
