--- a/Source/Yobao/packages.config
+++ b/Source/Yobao/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Nancy" version="0.23.2" targetFramework="net45" />
   <package id="Nancy.Hosting.Aspnet" version="0.23.2" targetFramework="net45" />
+  <package id="Nancy.Serialization.JsonNet" version="0.23.2" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net45" />
   <package id="System.Linq.Dynamic" version="1.0.2" targetFramework="net45" />
 </packages>
