--- a/Source/Yobao/Web.config
+++ b/Source/Yobao/Web.config
@@ -4,8 +4,20 @@
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+	<configSections>
+		<section name="razor" type="Nancy.ViewEngines.Razor.RazorConfigurationSection, Nancy.ViewEngines.Razor" />
+		<sectionGroup name="system.web.webPages.razor" type="System.Web.WebPages.Razor.Configuration.RazorWebSectionGroup, System.Web.WebPages.Razor, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35">
+			<section name="host" type="System.Web.WebPages.Razor.Configuration.HostSection, System.Web.WebPages.Razor, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" requirePermission="false" />
+			<section name="pages" type="System.Web.WebPages.Razor.Configuration.RazorPagesSection, System.Web.WebPages.Razor, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" requirePermission="false" />
+		</sectionGroup>
+	</configSections>
 	<system.web>
-		<compilation debug="true" targetFramework="4.5" />
+		<compilation debug="true" targetFramework="4.5">
+			<buildProviders>
+				<add extension=".cshtml" type="Nancy.ViewEngines.Razor.BuildProviders.NancyCSharpRazorBuildProvider, Nancy.ViewEngines.Razor.BuildProviders" />
+				<add extension=".vbhtml" type="Nancy.ViewEngines.Razor.BuildProviders.NancyVisualBasicRazorBuildProvider, Nancy.ViewEngines.Razor.BuildProviders" />
+			</buildProviders>
+		</compilation>
 		<httpRuntime targetFramework="4.5" />
 		<httpHandlers>
 			<add verb="*" type="Nancy.Hosting.Aspnet.NancyHttpRequestHandler" path="*" />
@@ -18,12 +30,31 @@
 			<add name="Nancy" verb="*" type="Nancy.Hosting.Aspnet.NancyHttpRequestHandler" path="*" />
 		</handlers>
 	</system.webServer>
-  <runtime>
-    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-      <dependentAssembly>
-        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.5.0.0" newVersion="4.5.0.0" />
-      </dependentAssembly>
-    </assemblyBinding>
-  </runtime>
+	<runtime>
+		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+			<dependentAssembly>
+				<assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-4.5.0.0" newVersion="4.5.0.0" />
+			</dependentAssembly>
+		</assemblyBinding>
+	</runtime>
+	<appSettings>
+		<add key="webPages:Enabled" value="false" />
+	</appSettings>
+	<system.web.webPages.razor>
+		<pages pageBaseType="Nancy.ViewEngines.Razor.NancyRazorViewBase">
+			<namespaces>
+				<add namespace="Nancy.ViewEngines.Razor" />
+				<add namespace="System" />
+				<add namespace="System.Collections.Generic" />
+			</namespaces>
+		</pages>
+	</system.web.webPages.razor>
+	<razor disableAutoIncludeModelNamespace="false">
+		<namespaces>
+			<add namespace="System" />
+			<add namespace="System.Linq" />
+			<add namespace="System.Collections.Generic" />
+		</namespaces>
+	</razor>
 </configuration>
