--- a/Source/Yobao/Web.config
+++ b/Source/Yobao/Web.config
@@ -51,10 +51,16 @@
 		</pages>
 	</system.web.webPages.razor>
 	<razor disableAutoIncludeModelNamespace="false">
+		<assemblies>
+			<add assembly="System.ComponentModel.DataAnnotations, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
+			<add assembly="System.Dynamic, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+			<add assembly="Microsoft.CSharp, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+		</assemblies>
 		<namespaces>
 			<add namespace="System" />
 			<add namespace="System.Linq" />
 			<add namespace="System.Collections.Generic" />
+			<add namespace="System.ComponentModel.DataAnnotations" />
 		</namespaces>
 	</razor>
 </configuration>
