--- a/Source/Yobao/Web.config
+++ b/Source/Yobao/Web.config
@@ -29,6 +29,9 @@
 		<handlers>
 			<add name="Nancy" verb="*" type="Nancy.Hosting.Aspnet.NancyHttpRequestHandler" path="*" />
 		</handlers>
+		<modules runAllManagedModulesForAllRequests="true">
+			<remove name="WebDAVModule"/>
+		</modules>
 	</system.webServer>
 	<runtime>
 		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
