--- a/Source/Yobao/Yobao.csproj
+++ b/Source/Yobao/Yobao.csproj
@@ -101,7 +101,13 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\Boat.cs" />
+    <Compile Include="Models\Car.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\Fakes\FakeBoatRepository.cs" />
+    <Compile Include="Repositories\Fakes\FakeCarRepository.cs" />
+    <Compile Include="Repositories\Fakes\FakeRepository.cs" />
+    <Compile Include="Repositories\IRepository.cs" />
     <Compile Include="SampleDatabase.cs" />
     <Compile Include="Yobao.cs" />
     <Compile Include="YobaoNancyBootstrapper.cs" />
