--- a/Source/Yobao.Core/Yobao.Core.csproj
+++ b/Source/Yobao.Core/Yobao.Core.csproj
@@ -58,6 +58,7 @@
     <Compile Include="NavigationItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestCar.cs" />
+    <Compile Include="UIPart.cs" />
     <Compile Include="YobaoModule.cs" />
     <Compile Include="YobaoStorageModule.cs" />
   </ItemGroup>
