--- a/Source/Yobao.Core/Yobao.Core.csproj
+++ b/Source/Yobao.Core/Yobao.Core.csproj
@@ -54,6 +54,7 @@
     <Compile Include="DataConfiguration.cs" />
     <Compile Include="IDataPersistence.cs" />
     <Compile Include="IDataSource.cs" />
+    <Compile Include="IModelRegistrar.cs" />
     <Compile Include="ModelRegistrar.cs" />
     <Compile Include="NavigationItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
